--- a/VsCode/HTML/css/panaderia2.css
+++ b/VsCode/HTML/css/panaderia2.css
@@ -339,3 +339,67 @@ a:nth-child(1){
     
     
 }
+
+.tituloSecF{
+
+    padding-top: 50px;
+    font-size: 50px;
+    
+    text-align: center; 
+}
+
+.tituloSecF h1{
+    color: white;
+    font-family: "Quintessential";
+    border-bottom: solid white;
+    display: inline-block;
+    line-height: 1;
+    text-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+   
+
+    
+    
+}
+
+.Fcontent{
+    
+    width: 100%;
+    height: 70%;
+    margin-top: 100px;
+
+}
+
+.redes{
+    width: 50%;
+    height: 100%;
+    display: inline-block;
+    float: left;
+    border: white solid 2px;
+}
+.redes h1{
+    text-align: center;
+    color: white;
+    font-family: "Quintessential";
+    margin-top: 50px;
+}
+
+.footer{
+    /*background-image: url('/img/fondoPan.png');*/
+    background-color: black;
+    box-sizing: border-box;
+    height: 100vh;
+    width: 100%;
+    color: white;
+}
+
+.mapa{
+    width: 50%;
+    height: 100%;
+    float: left;
+}
+
+.mapa iframe{
+    width: 100%;
+    height: 100%;
+    filter: grayscale(100%) invert(92%) contrast(73%);
+}
