--- a/VsCode/HTML/css/panaderia2.css
+++ b/VsCode/HTML/css/panaderia2.css
@@ -299,7 +299,7 @@ a:nth-child(1){
 .SNcontent{
     margin:auto;
     width: 80%;
-    height: 70%;
+    height: 600px;
     margin-top: 80px;
     
 
@@ -323,6 +323,8 @@ a:nth-child(1){
     height: 100%;
     margin-left: 20%;
     border: 2px solid black;
+    box-sizing: border-box;
+    padding: 100px;
     
 
     
@@ -383,6 +385,7 @@ a:nth-child(1){
     display: inline-block;
     float: left;
     border: white solid 2px;
+    
 }
 .redes h1{
     text-align: center;
