--- a/VsCode/HTML/css/panaderia2.css
+++ b/VsCode/HTML/css/panaderia2.css
@@ -1,6 +1,6 @@
 html{
     scroll-behavior: smooth;
-    
+    /* El movimiento del scroll es mas suave */
 }
 
 * {
@@ -21,13 +21,12 @@ body{
     background-color: #b6851ad8 ;
     height: 100px;
     width: 100%;
-    
     box-sizing: border-box;
     border: solid black 1px;
     position: fixed;
     top: 0;
     z-index: 10;
-    
+    /* Barra de navegación fixed */
 
 }
 .bar a:hover{
@@ -43,22 +42,19 @@ body{
     margin: 0;
     z-index:100 ;
     float: left;
-    
-    
-    
-    
+    /* Logo flotante a la izquierda */
 }
 
 .secc{
     width: 50%;
     box-sizing: border-box;
-    height: 100%;
-   
+    height: auto;
     align-items: center;
     justify-content: center;
     float: left;
     margin-left: 90px;
     margin-top: 30px;
+    /* Secciones de la barra de navegacion en linea con un float left */
     
        
 }
@@ -76,6 +72,7 @@ a:nth-child(1){
 
     background-color: white;
     border-radius: 10px;
+    /* Estilos para únicamente el primer enlace (INICIO) */
    
 }
 
@@ -85,6 +82,7 @@ a:nth-child(1){
     height: 100%;
     float: right;
     justify-content: end;
+    /* Iconos de bandera y bolsa a la derecha del todo */
     
 
 }
@@ -109,12 +107,14 @@ a:nth-child(1){
     display: flex;
     align-items: center;
     justify-content: center;
+    /* El fondo de la pagina principal ocupa todo el viewport */
 
 }
 .fondo img {
     position: absolute;
     width: 100%;
     height: 100%;
+
     
 }
 .titulo{
@@ -122,7 +122,7 @@ a:nth-child(1){
     position: relative;
     font-family: "Puppies Play", cursive;
     background: linear-gradient(to right, #FFDA7B, #605741); /* Gradiente de rojo a amarillo */
-    -webkit-background-clip: text; /* Clipa el fondo al texto (Chrome/Safari) */
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     line-height: 0.6; /* Ajusta el interlineado si es necesario */
     font-size: 190px;
@@ -142,9 +142,9 @@ a:nth-child(1){
     width: 100%;
     height: 1400px;
     position: relative;
-    background-image: url('/img/fondoPan.png'); /* Imagen de fondo */
+    background-image: url('img/fondoPan.png'); /* Imagen de fondo */
     
-    
+    /* Seccion PANADERIA */
     
 }
 
@@ -179,7 +179,7 @@ a:nth-child(1){
     float: left;
     text-align: center;
     box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
-    
+    /* Estilo de las etiquetas de todos los productos */
     
 }
 
@@ -190,6 +190,7 @@ a:nth-child(1){
     margin-top: 20px;
     margin-bottom: 5px;
     box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+    /* Estilo de la primera imagen de cada producto (el producto en sí) */
 }
 
 .producto p:nth-of-type(1){
@@ -200,6 +201,7 @@ a:nth-child(1){
     font-weight: bold;
     float:left;
     font-family: "PT Serif Caption";
+    /* Estilo del nombre del producto */
     
 }
 
@@ -211,6 +213,7 @@ a:nth-child(1){
     margin-left: 40px;
     font-weight: bold;
     font-family: "Quintessential";
+    /* Estilo del precio del producto */
     
 }
 .producto p:nth-of-type(3){
@@ -221,6 +224,7 @@ a:nth-child(1){
     margin-top: 70px;
     margin-bottom: 60px;
     font-family: "Quintessential";
+    /* Estilo de la descripción del producto */
 }
 
 .producto a{
@@ -231,6 +235,7 @@ a:nth-child(1){
     font-size: 17px;
     color: #563F0C;
     text-decoration: underline;
+    /* Estilo del enlace de ingredientes de los productos */
 
 }
 .producto img:last-child{
@@ -239,7 +244,7 @@ a:nth-child(1){
     float: left;
     margin-left: 120px;
     
-    
+    /* Estilo del icono de bolsa de cada producto */
     
 }
 
@@ -252,17 +257,17 @@ a:nth-child(1){
     width: 100%;
     height: 1400px;
     position: relative;
-    background-image: url('/img/fondoPan.png'); /* Imagen de fondo */
+    background-image: url('img/fondoPan.png'); /* Imagen de fondo */
     
-    
+    /* Seccion BOLLERIA */
     
 }
 .empanadas{
     width: 100%;
     height: 800px;
     position: relative;
-    background-image: url('/img/fondoPan.png'); /* Imagen de fondo */
-    
+    background-image: url('img/fondoPan.png'); /* Imagen de fondo */
+    /* Seccion empanadas */
     
     
 }
@@ -272,28 +277,31 @@ a:nth-child(1){
     box-sizing: border-box;
     height: 100%;
     margin: auto;
+    /* Estilos del contenedor de productos de la seccion Bolleria */
 }
 
-.productos{
+/* .productos{
     width: 100%;
     height: 100%;
     box-sizing: border-box;
     margin: auto;
-}
+} */
 
 .productos3{
     width: 80%;
     box-sizing: border-box;
     height: 70%;
     margin: auto;
+    /* Estilos del contenedor de los productos de la seccion Empanadas */
 }
 
 
 .SobreN{
-    background-image: url('/img/fondoPan.png');
+    background-image: url('img/fondoPan.png');
     box-sizing: border-box;
     height: 100vh;
     width: 100%;
+    /* Estilos de la seccion SobreNosotros */
 }
 
 .SNcontent{
@@ -310,21 +318,27 @@ a:nth-child(1){
     height: 100%;
     display: inline-block;
     float: left;
+    /* Contenedor del horno flotante a la izquierda */
+    
 }
 
-.horno img{
+.horno video{
     width: 100%;
-    height: 100%
+    height: 100%;
+    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+     object-fit: cover;  /* Que ocupe todo el tamaño del contenedor */
+    
 }
 .info{
     display: inline-block;
     float: left;
     width: 50%;
     height: 100%;
-    margin-left: 20%;
+    margin-left: 10%;
     border: 2px solid black;
     box-sizing: border-box;
     padding: 100px;
+    
     
 
     
@@ -413,4 +427,5 @@ a:nth-child(1){
     width: 100%;
     height: 100%;
     filter: grayscale(100%) invert(92%) contrast(73%);
+    /* Mapa con filtros de color para darle un tono mas oscuro y tenue */
 }
